First Last Prev Next    No search results available      Search page      Enter new bug
Bug#: 11608
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Andrew Pinski <pinskia@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: dank@kegel.com
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
temp.diff.txt patch that should fix it patch 2004-01-02 07:27 333 bytes Edit | Diff
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 11608 depends on: Show dependency tree
Show dependency graph
Bug 11608 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: 2004-01-27 16:27 Opened: 2003-07-20 17:23
I'm building and testing an x86->sh4 crosscompiler with
http://kegel.com/crosstool
With either gcc-3.3 or gcc-ss-3_3-20030714 I get:

Testing debug/20020327-1.c, -gstabs1
...
FAIL: gcc.dg/debug/20020327-1.c (test for excess errors)
Excess errors:
/tmp/cc8dFF7Y.s: Assembler messages:
/tmp/cc8dFF7Y.s:66: Error: symbol `Letext' is already defined

------- Comment #1 From Andrew Pinski 2003-07-30 02:45 -------
I can confirm this on the mainline (20030718).

------- Comment #2 From Andrew Pinski 2004-01-02 06:58 -------
The problem looks like DBX_OUTPUT_MAIN_SOURCE_FILE_END is defined wrong 
and uses Letext which it should not for this test as Letext is the function which is defined 
in the file.  Maybe adding a . infront of the label will fix it.

------- Comment #3 From Andrew Pinski 2004-01-02 07:00 -------
Or convert it to use asm_printf like below:

#define DBX_OUTPUT_MAIN_SOURCE_FILE_END(FILE, FILENAME)                 \
  asm_fprintf (FILE,                                                    \
              "\t.stabs \"\",%d,0,0,%LLetext\n%LLetext:\n", N_SO N_SO)

------- Comment #4 From Andrew Pinski 2004-01-02 07:27 -------
Created an attachment (id=5399) [edit]
patch that should fix it

------- Comment #5 From Andrew Pinski 2004-01-02 07:28 -------
Can you try this patch which should fix it?

------- Comment #6 From Andrew Pinski 2004-01-11 00:26 -------
Since this is minor target and this never quiet work right anyways, I am moving
this to 
3.4.1 while waiting for the results.

------- Comment #7 From Dara Hazeghi 2004-01-17 23:03 -------
Dan, can you test the patch, or send the asm from the failing testcase? Thanks.

------- Comment #8 From dank@kegel.com 2004-01-27 16:25 -------
The patch seems to fix the problem when applied to gcc-3.3-20040119!

------- Comment #9 From Andrew Pinski 2004-01-27 16:27 -------
Thanks, I will ask for approval soon.

------- Comment #10 From Dara Hazeghi 2004-05-01 00:29 -------
Andrew, this is still assigned to you. Any progress in getting your patch
approved?

------- Comment #11 From Andrew Pinski 2004-05-01 00:40 -------
Woops I had forgot to submit it:(.  I will do so right now.

------- Comment #12 From CVS Commits 2004-05-01 00:48 -------
Subject: Bug 11608

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	pinskia@gcc.gnu.org	2004-05-01 00:48:33

Modified files:
	gcc            : ChangeLog 
	gcc/config/sh  : elf.h 

Log message:
	2004-04-20  Andrew Pinski  <pinskia@physics.uc.edu>
	
	PR target/11608
	* config/sh/elf.h (DBX_OUTPUT_MAIN_SOURCE_FILE_END): Update and make it
	more like the one in config/dbxelf.h.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.3536&r2=2.3537
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/sh/elf.h.diff?cvsroot=gcc&r1=1.32&r2=1.33


------- Comment #13 From Andrew Pinski 2004-05-01 00:50 -------
Fixed on the mainline for 3.5.0.

First Last Prev Next    No search results available      Search page      Enter new bug