re PR target/11608 (testcase gcc.dg/debug/20020327-1.c fails with -gstabs1 etc.)

2004-04-20  Andrew Pinski  <pinskia@physics.uc.edu>

        PR target/11608
        * config/sh/elf.h (DBX_OUTPUT_MAIN_SOURCE_FILE_END): Update and make it
        more like the one in config/dbxelf.h.

From-SVN: r81379